objects/ARObj1__c.object
<CustomObject>
    <description>Add ARObj1 comment</description>
    <fields>
        <fullName>AROBJField11__c</fullName>
        <description>Add Comment for field AROBJField11 Test1 Edit</description>
        <label>AROBJField11</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ARObjField2__c</fullName>
        <description>Test2 Edit ARObjField2 Comment</description>
        <label>ARObjField2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>T1__c</fullName>
        <label>T1</label>
        <type>Phone</type>
    </fields>
    <label>ARObj1</label>
    <nameField>
        <label>ARObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ARVal1</fullName>
        <active>true</active>
        <description>Test1 validationrule</description>
        <errorConditionFormula>ISBLANK( AROBJField11__c )</errorConditionFormula>
        <errorMessage>Please Enter a Value</errorMessage>
    </validationRules>
</CustomObject>